--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.0.0",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "force": "^0.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
